[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["socks", "json", "rustls-tls"] }
bitcoin = "0.27"
monero = "0.14"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secp256k1 = "0.21"
web3 = "0.17"
solana-sdk = "1.9"
hex = "0.4"
